# embedded-web-ui

./: Cargo.toml  LICENSE-MIT  README.md  enc  update_elf.sh
b2/: Cargo.toml
b2/src/: main.rs  serial.rs
cipy-app/: main.py  ui.json  watch
cipy-app/lib/: colorsys.mpy
dev-ws-rs/: Cargo.toml
dev-ws-rs/src/: main.rs
dummy-bridge/: Cargo.toml  run.sh
dummy-bridge/src/: main.rs  serial.rs
serial-ws-bridge/: Cargo.toml  run.sh
serial-ws-bridge/src/: main.rs  serial.rs
src/: lib.rs
stm32f4-app/: Cargo.toml  rust-toolchain.toml
stm32f4-app/.cargo/: config.toml
stm32f4-app/src/: main.rs
web-app/: .gitignore  Cargo.toml  Dioxus.toml
web-app/public/: chart.js  style.css
web-app/src/: components.rs  defmt_handler.rs  lib.rs  main.rs  ser_de.rs
ws-py/: .envrc  README.md  client.py  requirements.txt
