[package]
name = "embedded-web-ui"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["web-app", "serial-ws-bridge"]
exclude = ["ws-py", "stm32f4-app"]


[dependencies]
defmt = { version = "=0.3.2", optional = true }
heapless = { version = "0.7", default-features = false }
serde = { version = "1", default_features = false, features = ["derive"] }

[features]
std = []
defmt = ["dep:defmt"]
