[package]
name = "embedded-web-ui"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["web-app", "serial-ws-bridge"]
exclude = ["ws-py", "cipy-app", "stm32f4-app"]


[dependencies]
defmt = { version = "=0.3.2", optional = true }
heapless = { version = "0.7", default-features = false, features = [
    "defmt-impl",
    "serde",
] }
serde = { version = "1", default_features = false, features = ["derive"] }
postcard = { version = "1.0.4", features = ["use-std"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
postcard = { version = "1.0.4", features = ["use-std"] }

[features]
std = []
defmt = ["dep:defmt"]
postcard = ["dep:postcard"]
json = ["dep:serde_json"]

[[bin]]
name = "sizes"
required-features = ["postcard"]
