[package]
name = "dev-ws-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
log = "0.4.17"
pretty_env_logger = "0.4.0"
tokio = { version = "1.27.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
embedded-web-ui = { path = "..", features = ["std"] }
postcard = { version = "1.0.4", features = ["use-std"] }
