[package]
name = "dummy-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["ws", "headers"] }
bytes = "1.4.0"
color-eyre = "0.6.2"
console-subscriber = "0.1.8"
eyre = "0.6.8"
futures = "0.3.28"
futures-util = "0.3.28"
glob = "0.3.1"
listenfd = "1.0.1"
pretty-hex = "0.3.0"
sender-sink = "0.2.0"
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
tokio-serial = "5.4.4"
tokio-stream = { version = "0.1.12", features = ["sync"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
tower-http = { version = "0.4.0", features = ["cors", "fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
embedded-web-ui = { path = "../", features = ["std"] }
postcard = { version = "1.0", features = ["use-std"] }
