[package]
name = "web-app"
version = "0.1.0"
authors = ["Anatol Ulrich <e+github@mail.taugt.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.6"
dioxus = "0.3"
dioxus-web = "0.3"
chrono = { version = "0.4", features = ["wasmbind"] }
#fermi = "0.3"
gloo = { version = "0.8", features = ["futures"] }
im-rc = "15.1.0"
embedded-web-ui = { path = "..", features = ["std"] }

# WebAssembly Debug
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"

dioxus-websocket-hooks = { git = "https://github.com/spookyvision/dioxus-websocket-hooks.git" }

defmt-decoder = { git = "https://github.com/spookyvision/defmt.git", features = [
    "unstable",
] }


postcard = { version = "1.0.4", features = ["use-std"] }
serde = { version = "1.0.159", default_features = false, features = ["derive"] }
futures = "0.3.28"
wasm-bindgen = "0.2.84"
anyhow = "1.0.70"
ouroboros = "0.15.6"
